@@ -28,3 +28,7 @@ syntax.corExt=correction / extension
 
 syntax.textLimitLineVisible=Show text limit line
 syntax.textLimitLineWidth=Text limit line width
+
+
+syntax.abrevclose=Close
+syntax.abrevNewLineNote=Use \\n in corrections for line break. Note: Bookmarks are more powerful than abreviations.
